--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "build": "^0.1.4",
     "cra-template": "1.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
