added button with childrens

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project1",
-  "homepage": "https://mkrtchyantigran.github.io/counterWithClasses",
+  "homepage": "https://mkrtchyantigran.github.io/Counter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
